--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -936,23 +936,24 @@
                                     </div>
                                 </div>
                                 <div class="col-sm-12 col-md-6 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
-                                    <form id="contactForm" class="single-form quate-form wow fadeInUp" data-toggle="validator">
+                                    <form id="contactForm" method="POST" class="single-form quate-form wow fadeInUp" data-toggle="validator">
+                                        {% csrf_token %}
                                         <div id="msgSubmit" class="h3 text-center hidden"></div>
                                         <div class="row">
                                             <div class="col-sm-12">
-                                                <input name="name" class="contact-name form-control" id="name" type="text" placeholder="First Name" required>
+                                                <input name="first_name" class="contact-name form-control" id="name" type="text" placeholder="First Name" required>
                                             </div>
                 
                                             <div class="col-sm-12">
-                                                <input name="name" class="contact-email form-control" id="L_name" type="text" placeholder="Last Name" required>
+                                                <input name="last_name" class="contact-email form-control" id="last_name" type="text" placeholder="Last Name" required>
                                             </div>
                 
                                             <div class="col-sm-12">
-                                                <input name="name" class="contact-subject form-control" id="email" type="email" placeholder="Your Email" required>
+                                                <input name="email" class="contact-subject form-control" id="email" type="email" placeholder="Your Email" required>
                                             </div>
                 
                                             <div class="col-sm-12">
-                                                <textarea class="contact-message" id="message" rows="6" placeholder="Your Message" required></textarea>
+                                                <textarea class="contact-message" name="message" id="message" rows="6" placeholder="Your Message" required></textarea>
                                             </div>
                                             
                                             <!-- Subject Button -->
