--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -168,6 +168,7 @@
                                     <li><span>Python</span></li>
                                     <li><span>Django</span></li>
                                     <li><span>Html/Css</span></li>
+                                    <li><span>Wordpress</span></li>
                                     <li><span>Javascript</span></li>
                                     <li><span>Postgres</span></li>
                                     <li><span>AWS (RDS/S3)</span></li>
@@ -436,6 +437,17 @@
                                                 </div>
                                                 <div class="progressBar">
                                                     <div class="percentagem" style="width: 50%;"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="candidatos">
+                                            <div class="parcial">
+                                                <div class="info">
+                                                    <div class="nome">Wordpress</div>
+                                                    <div class="percentagem-num">90%</div>
+                                                </div>
+                                                <div class="progressBar">
+                                                    <div class="percentagem" style="width: 90%;"></div>
                                                 </div>
                                             </div>
                                         </div>
