--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -82,15 +82,15 @@
                                 <li class="nav-item">
                                    <a class="nav-link" href="#mh-skills">Skills</a>
                                 </li>                                
-                                <!-- <li class="nav-item">
+                                <li class="nav-item">
                                    <a class="nav-link" href="#mh-experience">Experiences</a>
-                                </li>                                 -->
+                                </li>                                
                                 <li class="nav-item">
                                     <a class="nav-link" href="#mh-portfolio">Portfolio</a>
                                 </li>                               
-                                <!-- <li class="nav-item">
+                                <li class="nav-item">
                                     <a class="nav-link" href="#mh-blog">Blog</a>
-                                </li> -->
+                                </li>
                                 <li class="nav-item">
                                    <a class="nav-link" href="#mh-contact">Contact</a>
                                 </li>
@@ -488,30 +488,30 @@
            EXPERIENCES
         ===================
         -->
-        <!-- <section class="mh-experince image-bg featured-img-one" id="mh-experience">
+        <section class="mh-experince image-bg featured-img-one" id="mh-experience">
             <div class="img-color-overlay">
                 <div class="container">
                     <div class="row section-separator">
                         <div class="col-sm-12 col-md-6">
                             <div class="mh-education">
                                 <h3 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Education</h3>
-                                <div class="mh-education-deatils"> -->
+                                <div class="mh-education-deatils">
                                     <!-- Education Institutes-->
-                                    <!-- <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
+                                    <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                                         <h4>Art & Multimedia From <a href="#">Oxford University</a></h4>
                                         <div class="mh-eduyear">2005-2008</div>
                                         <p>It is a long established fact that a reader will be distracted by the readable content of a 
                                         page when looking at its layout. The point of using  Lorem Ipsum </p>
-                                    </div>                                 -->
+                                    </div>                                
                                     <!-- Education Institutes-->
-                                    <!-- <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
+                                    <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
                                         <h4>Art & Multimedia From <a href="#">Oxford University</a></h4>
                                         <div class="mh-eduyear">2005-2008</div>
                                         <p>It is a long established fact that a reader will be distracted by the readable content of a 
                                         page when looking at its layout. The point of using  Lorem Ipsum </p>
-                                    </div>                                 -->
+                                    </div>                                
                                     <!-- Education Institutes-->
-                                    <!-- <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
+                                    <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
                                         <h4>Art & Multimedia From <a href="#">Oxford University</a></h4>
                                         <div class="mh-eduyear">2005-2008</div>
                                         <p>It is a long established fact that a reader will be distracted by the readable content of a 
@@ -519,13 +519,13 @@
                                     </div>
                                 </div>
                             </div>
-                        </div> -->
-                        <!-- <div class="col-sm-12 col-md-6">
+                        </div>
+                        <div class="col-sm-12 col-md-6">
                             <div class="mh-work">
                                  <h3>Work Experience</h3>
-                                <div class="mh-experience-deatils"> -->
+                                <div class="mh-experience-deatils">
                                     <!-- Education Institutes-->
-                                    <!-- <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">
+                                    <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">
                                         <h4>UI/UX Designer <a href="#">IronSketch</a></h4>
                                         <div class="mh-eduyear">2005-2008</div>
                                         <span>Responsibility :</span>
@@ -533,9 +533,9 @@
                                             <li><i class="fa fa-circle"></i>Validate CSS</li>
                                             <li><i class="fa fa-circle"></i>Project Management</li>
                                         </ul>
-                                    </div>                                 -->
+                                    </div>                                
                                     <!-- Education Institutes-->
-                                    <!-- <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
+                                    <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
                                         <h4>Art & Multimedia From <a href="#">Oxford University</a></h4>
                                         <div class="mh-eduyear">2005-2008</div>
                                         <span>Responsibility :</span>
@@ -543,9 +543,9 @@
                                             <li><i class="fa fa-circle"></i>Validate CSS</li>
                                             <li><i class="fa fa-circle"></i>Project Management</li>
                                         </ul>
-                                    </div>                                 -->
+                                    </div>                                
                                     <!-- Education Institutes-->
-                                    <!-- <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
+                                    <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
                                         <h4>Art & Multimedia From <a href="#">Oxford University</a></h4>
                                         <div class="mh-eduyear">2005-2008</div>
                                         <span>Responsibility :</span>
@@ -560,7 +560,7 @@
                     </div>
                 </div>
             </div>
-        </section>        -->
+        </section>       
         
         <!--
         ===================
@@ -753,7 +753,7 @@
            BLOG
         ===================
         -->
-        <!-- <section class="mh-blog image-bg featured-img-two" id="mh-blog">
+        <section class="mh-blog image-bg featured-img-two" id="mh-blog">
             <div class="img-color-overlay">
                 <div class="container">
                     <div class="row section-separator">
@@ -811,7 +811,7 @@
                     </div>
                 </div>
             </div>
-        </section>  -->
+        </section> 
         
         <!--
         ===================
@@ -876,8 +876,7 @@
                                     <h4>John Mike</h4>
                                     <span>CEO, Author.Inc</span>
                                 </div>
-                            </div>                    
-                            
+                            </div>
                             <div class="each-client-item">
                                 <div class="mh-client-item dark-bg black-shadow-1">
                                     <img src="{% static 'assets/images/c-1.png' %}" alt="" class="img-fluid">
